# Race_simulator

./: CMakeLists.txt  README.md  main.cpp
Race_simulator_lib/: Air_vehicles.cpp  Air_vehicles.h  All_terrain_boots.cpp  All_terrain_boots.h  Broom.cpp  Broom.h  CMakeLists.txt  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  Fast_camel.cpp  Fast_camel.h  Land_vehicles.cpp  Land_vehicles.h  Magic_carpet.cpp  Magic_carpet.h  Vehicles.cpp  Vehicles.h
